[package]
name = "solana-nova-sniper"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "High-performance Solana token sniper for Pump.fun and Raydium LaunchLab"
license = "MIT"

[[bin]]
name = "nova-sniper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"

anyhow = "1.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

clap = { version = "4.5", features = ["derive", "env"] }

bs58 = "0.5"
base64 = "0.22"
hex = "0.4"
regex = "1.10"
bytes = "1.6"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"
bincode = "1.3"

solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0", features = ["no-entrypoint"] }

yellowstone-grpc-client = "2.0"
yellowstone-grpc-proto = "2.0"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }

async-trait = "0.1"
dashmap = "6.0"
parking_lot = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"
proptest = "1.4"
tempfile = "3.10"

[[bench]]
name = "latency"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
